--- a/achieve.html
+++ b/achieve.html
@@ -7,14 +7,32 @@
         <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link href="css/jkstyle.css" rel="stylesheet" type="text/css">
+        <script src="https://kit.fontawesome.com/8ab6929af4.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+        <link href="assets/css/jkstyle.css" rel="stylesheet" type="text/css">
+        <script src="assets/js/jquery.js"></script>
     </head>
     <body>
-        <nav class="nav justify-content-center navbar">
-            <a href="index.html">
-                <img id="jklogo" src="images/jklogo.png" alt="JK logo">
-            </a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img id="jklogo" src="images/jklogo.png" alt="i am jamie kam" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link"href="index.html">Home</a>
+                        <a class="nav-link" href="physical.html">My Sport</a>
+                        <a class="nav-link" href="cognitive.html">My forte</a>
+                        <a class="nav-link" href="aesthetic.html">My niche</a>
+                        <a class="nav-link active" aria-current="page" href="achieve.html"><i class="fa-solid fa-medal"></i> Achievements</a>
+                        <div class="nav-link">================</div> 
+                        <div class="nav-link">Version: 1.23.500</div>
+                    </div>
+                </div>
+            </div>
         </nav>
          <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
@@ -68,11 +86,15 @@
                     </ul>
                 <a class="btn btn-sm btn-warning" href="achieve.html#jklogo">Back to Top</a>
                 <a class="btn btn-sm btn-warning" href="jkdevpdf.pdf" download="portfolio">Download PDF</a>
-                <a class="btn btn-sm btn-warning" href="googleform.html" target="blank">Contact Me</a>
             </div>
         </div>
          <div class="container-fluid domain">
             <div class="row">
+                <div class="col">
+                    <a href="index.html" title="I am JK">
+                        <i class="fa-solid fa-house"><br>WHO AM I?</i>
+                    </a>
+                </div>
                 <div class="col" title="A SPARTAN">
                     <a href="physical.html">
                         <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>SPARTAN
@@ -88,23 +110,8 @@
                         <img class="icon" src="images/icons/violin.png" alt="A Musician"><br>VIOLINIST
                     </a>
                 </div>
-                <div class="col" title="A CODER">
-                    <a href="cognitive.html#scratch">
-                        <img class="icon" src="images/icons/code.png" alt="A Coder"><br>CODER
-                    </a>
-                </div>
-                <div class="col" title="A GAMER">
-                    <a href="cognitive.html#chess">
-                        <img class="icon" src="images/icons/gamer.png" alt="A Gamer"><br>GAMER
-                    </a>
-                </div>
-                <div class="col" title="A MATHEMATICIAN">
-                    <a href="cognitive.html#math">
-                        <img class="icon" src="images/icons/math.png" alt="A Mathematician"><br>MATHEMATICIAN
-                    </a>
-                </div>
             </div>
         </div>
-        <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
+        <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
     </body>
 </html>
