--- a/index.html
+++ b/index.html
@@ -8,14 +8,32 @@
         <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link href="css/jkstyle.css" rel="stylesheet" type="text/css">
+        <script src="https://kit.fontawesome.com/8ab6929af4.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+        <link href="assets/css/jkstyle.css" rel="stylesheet" type="text/css">
+        <script src="assets/js/jquery.js"></script>
     </head>
     <body>
-        <nav class="nav justify-content-center navbar">
-            <a href="index.html">
-                <img id="jklogo" src="images/jklogo.png" alt="JK logo">
-            </a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img id="jklogo" src="images/jklogo.png" alt="i am jamie kam" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Home</a>
+                        <a class="nav-link" href="physical.html">My Sport</a>
+                        <a class="nav-link" href="cognitive.html">My forte</a>
+                        <a class="nav-link" href="aesthetic.html">My niche</a>
+                        <a class="nav-link" href="achieve.html">Achievements</a>
+                        <div class="nav-link">================</div> 
+                        <div class="nav-link">Version: 1.23.500</div>
+                    </div>
+                </div>
+            </div>
         </nav>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
@@ -30,27 +48,29 @@
             <div class="row">
                 <div class="col" title="A SPARTAN">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>my sport
+                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>My sport
                     </a>
                 </div>
                 <div class="col" title="A LOGICIAN">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="A Logician"><br>my forte
+                        <img class="icon" src="images/icons/logician.png" alt="A Logician"><br>My forte
                     </a>
                 </div>
                 <div class="col" title="A MUSICIAN">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="A Musician"><br>my niche
+                        <img class="icon" src="images/icons/violin.png" alt="A Musician"><br>My niche
                     </a>
                 </div>
                 <div class="col" title="A LEADER">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>Achievements
                     </a>
                 </div>
             </div>
         </div>
        
-    <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
+    <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     </body>
 </html>
