--- a/physical.html
+++ b/physical.html
@@ -8,16 +8,34 @@
         <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link href="css/jkstyle.css" rel="stylesheet" type="text/css">
+        <script src="https://kit.fontawesome.com/8ab6929af4.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link href="assets/css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/jquery.js"></script>
     </head>
     <body>
-       <nav class="nav justify-content-center navbar">
-            <a href="index.html">
-                <img id="jklogo" src="images/jklogo.png" alt="JK logo">
-            </a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img id="jklogo" src="images/jklogo.png" alt="i am jamie kam" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link"href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="physical.html"><i class="fa-solid fa-person-biking"></i> My Sport</a>
+                        <a class="nav-link" href="cognitive.html">My forte</a>
+                        <a class="nav-link" href="aesthetic.html">My niche</a>
+                        <a class="nav-link" href="achieve.html">Achievements</a>
+                        <div class="nav-link">================</div> 
+                        <div class="nav-link">Version: 1.23.500</div>
+                    </div>
+                </div>
+            </div>
         </nav>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
@@ -86,11 +104,17 @@
         </section>
         <div class="container-fluid main">
             <div class="centra">
-                <h6 style="font-weight:800;">Year 2020</h6>
-                    <p>The COVID19 pandemic has changed how I continue onwards with my journey in fitness and health. I mostly clock 10km of biking or 5km of running around my neighborhood utilizing strava to keep me in check. I have come to appreciate physical fitness as a prerequisite to for the endurance of mental prowess.</p>
+                <h6 style="font-weight:800;">Year 2022</h6>
+                    <p>With the countinous easing of restrictions significantly increasing the sports I could try, I was excited to try new sports. From water sports like Paddleboarding to team-based or individual-based Tennis, I am sure that this year will be amazing.</p>
+                <hr>
+                <h6 style="font-weight:800;">Year 2021</h6>
+                    <p>The easing of restrictions significantly increased the sports I could try. Although I will be sitting for my Primary Six Leaving Examination, I alway make sure to get enough exercise. </p>
+                <hr>
+                    <h6 style="font-weight:800;">Year 2020</h6>
+                    <p>The COVID19 pandemic has changed how I continue onwards with my journey in fitness and health. I mostly clock 5km of biking or 3km of running around my neighborhood utilizing strava to keep me in check. I have come to appreciate physical fitness as a prerequisite to for the endurance of mental prowess.</p>
                 <hr>
                 <h6 style="font-weight:800;">Year 2019</h6>
-                    <p>2019 was a year where I ventured into various other sporting activity aside from my training in BJJ and swimming! From team based football and badminton to individual focused sports such as figure skating and rock climbing. Rock climbing came so naturally to me that I was given the nickname spider-boy!   </p>
+                    <p>2019 was a year where I ventured into various other sporting activity aside from my training in BJJ and swimming, from team based football and badminton to individual focused sports such as figure skating and rock climbing!  </p>
                 <hr>
                 <h6 style="font-weight:800;">Year 2018</h6>
                     <p>I started training in Brazilian Jiu Jitsu (BJJ) as a form of fitness and self defence on top of swimming. I've come to appreaciate that both of these are lifeskills for survival. My most crucial take away from BJJ are the values of compassion, bravery, honesty and humility; values which forms the ethics and moral code of this martial art form.  </p>
@@ -100,26 +124,26 @@
             <div class="row">
                 <div class="col" title="I am JK">
                     <a href="index.html">
-                        <img class="icon" src="images/jklogo.png" alt="I am JK"><br>WHO AM I?
+                        <i class="fa-solid fa-house"><br>WHO AM I?</i>
                     </a>
                 </div>
                 <div class="col" title="A Logician">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>my forte
+                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>My forte
                     </a>
                 </div>
                 <div class="col" title="A Violinist">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>my niche
+                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>My niche
                     </a>
                 </div>
                 <div class="col" title="A Student Leader">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>Achievements
                     </a>
                 </div>
             </div>
         </div>
-        <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
+        <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
     </body>
 </html>
