--- a/achieve.html
+++ b/achieve.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/8ab6929af4.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
         <link href="assets/css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="assets/js/jquery.js"></script>
     </head>
@@ -24,12 +24,12 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link"href="index.html">Home</a>
-                        <a class="nav-link" href="physical.html">My Sport</a>
+                        <a class="nav-link" href="physical.html">My sport</a>
                         <a class="nav-link" href="cognitive.html">My forte</a>
                         <a class="nav-link" href="aesthetic.html">My niche</a>
                         <a class="nav-link active" aria-current="page" href="achieve.html"><i class="fa-solid fa-medal"></i> Achievements</a>
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.23.500</div>
+                        <div class="nav-link">Version: 1.24.500</div>
                     </div>
                 </div>
             </div>
@@ -50,15 +50,33 @@
         </nav>
         <div class="container-fluid main">
             <div class="centra">
+                <h6 style="font-weight: 800;">Year 2022</h6>
+                    <ul>
+                        <li></li>
+                    </ul>
+                    <hr>
+                <h6 style="font-weight: 800;">Year 2021</h6>
+                    <ul>
+                        <li>Acceptance to School of Science and Technology, Singapore(SST), through Direct School Admission</li>
+                        <li>MOE Edusave Scholarship 2021</li>
+                        <li>Edusave Award for Achievement, Good Leadership and Service(EAGLES) 2021</li>
+                        <li>Appointment as Prefect 2021</li>
+                        <li>Gold Award in the Singapore and Asian Schools Math Olympiad 2021(SASMO 2021)</li>
+                        <li>Bronze award in the Singapore Mathematical Olympiad for Primary Schools 2021(SMOPS 2021)</li>
+                        <li>Bronze award in the Singapore Primary Science Olympiad 2021(SPSO 2021)</li>
+                    </ul>
+                    <hr>
                 <h6 style="font-weight:800;">Year 2020</h6>
                     <ul>
-                        <li>MOE Edusave Certificate of Academic Achievements<br>Primary 5</li>
-                        <li>Top in English (Primary 5)<br>Singapore Primary School</li>
-                        <li>Bronze Award Middle Division - Grade 05<br>Singapore International Math Olympiad Challenge (SIMOC)</li>
-                        <li>Bronze Award<br>Annual Mathlympics</li>
-                        <li>Silver Award Grade 05 Division<br>Singapore and Asian Schools Math Olympiad (SASMO)</li>
-                        <li>SIlver Award Grade 05<br>Singapore Math Kangaroo Contest</li>
-                        <li>Credit Middle Division - Year 5<br>Australian Mathematics Competition</li>                 
+                        <li>MOE Edusave Scholarship 2020</li>
+                        <li>Edusave Award for Achievement, Good Leadership and Service(EAGLES) 2020</li>
+                        <li>Appointment as Prefect 2020</li>
+                        <li>Top in English</li>
+                        <li>Silver Award in Singapore Math Kangaroo Contest 2020 (SKMC 2020)</li>
+                        <li>Bronze Award in the 13th Annual Mathlympics 2020</li>
+                        <li>Bronze award in Singapore International Math Olympaid Challenge 2020 (SIMOC 2020), Math Olympaid Category</li>
+                        <li>Silver award in Singapore and Asian Schools Math Olympaid 2020 (SASMO 2020)</li>
+                        <li>Certificate of Credit in Australian Math Competition 2020 (AMC 2020)</li>
                     </ul>
                     <hr>
                 <h6 style="font-weight:800;">Year 2019</h6>
@@ -83,6 +101,13 @@
                         <li>Model Pupil Award - Primary 3<br>Singapore Primary School</li>
                         <li>Certificate of Completion<br>TSR Breaststroke Competency Programme</li>
                         <li>Certificate of Paticipation<br>Introduction to Basic Meditation</li>
+                    </ul>
+                    <hr>
+                <h6 style="font-weight: 800;">Year 2017</h6>
+                    <ul>
+                        <li>The Associated Board of Royal Schools of music (ABRSM) certificate of distinction for Grade01 violin examination.</li>
+                        <li>Certificate of Completion in 3D Minecraft Modding at First Code Academy</li>
+                        <li>Top in English</li>
                     </ul>
                 <a class="btn btn-sm btn-warning" href="achieve.html#jklogo">Back to Top</a>
                 <a class="btn btn-sm btn-warning" href="jkdevpdf.pdf" download="portfolio">Download PDF</a>
