--- a/aesthetic.html
+++ b/aesthetic.html
@@ -9,10 +9,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/8ab6929af4.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/bootstrap.css">
         <link href="assets/css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/bootstrap.js"></script>
         <script src="assets/js/jquery.js"></script>
     </head>
     <body>
@@ -27,12 +27,12 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link"href="index.html">Home</a>
-                        <a class="nav-link" href="physical.html">My Sport</a>
+                        <a class="nav-link" href="physical.html">My sport</a>
                         <a class="nav-link" href="cognitive.html">My forte</a>
                         <a class="nav-link active" aria-current="page" href="aesthetic.html"><i class="fa-solid fa-music"></i> My niche</a>
                         <a class="nav-link" href="achieve.html">Achievements</a>
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.23.500</div>
+                        <div class="nav-link">Version: 1.24.500</div>
                     </div>
                 </div>
             </div>
@@ -75,7 +75,13 @@
         </section>
         <div class="container-fluid main justify-content-center">
             <div class="centra">
-                <h6 style="font-weight:800;">Year 2020</h6>
+                <h6 stylr="font-weight: 800;">Year 2022</h6>
+                    <p>Year 2022 was definately the worst year to my progress in music. With Teacher Teresa now married and with a baby, she had no choice but to stop our lessons. Without a violin teacher, I turned to starting my theory classes. During my theory, I started on piano classes. Hence, I began studying piano, and theory under Teacher Edwynya</p>
+                <hr>
+                <h6 style="font-weight: 800;">Year 2021</h6>
+                    <p>With the COVID-19 pandemic now worse than 2020, all hopes of getting my violin examination for Grade04 dimished. With the continued closure of borders, the Grade Exams countinued, requiring four pieces instead of the usual three. However, this also called for no other components, like Aural. Now, as per Teacher Teresa's recommendation, I am preparing for my Grade05 theory exam to continue with Grade05 practical.</p>
+                <hr>
+                    <h6 style="font-weight:800;">Year 2020</h6>
                     <p>I call 2020 the year of adaptability! As much as I was excited to finally match my sister at Grade03, I was devastated that examimations was cancelled. However, the lockdown allowed me to shine as being an IT monitor and leader in school has allowed me to transition easily from physical classes to online classes. I am currently preparing myself for Grade04 examinations and will skip Grade03 as per Teacher Teresa's recommendation.</p>
                 <hr>
                 <h6 style="font-weight:800;">Year 2019</h6>
@@ -112,6 +118,6 @@
         </div>
         <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
         <script src="assets/js/jquery.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/bootstrap.js"></script>
     </body>
 </html>
