--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/8ab6929af4.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
         <link href="assets/css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="assets/js/jquery.js"></script>
     </head>
@@ -25,12 +25,12 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Home</a>
-                        <a class="nav-link" href="physical.html">My Sport</a>
+                        <a class="nav-link" href="physical.html">My sport</a>
                         <a class="nav-link" href="cognitive.html">My forte</a>
                         <a class="nav-link" href="aesthetic.html">My niche</a>
                         <a class="nav-link" href="achieve.html">Achievements</a>
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.23.500</div>
+                        <div class="nav-link">Version: 1.24.500</div>
                     </div>
                 </div>
             </div>
@@ -71,6 +71,6 @@
        
     <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
     <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
     </body>
 </html>
