--- a/cognitive.html
+++ b/cognitive.html
@@ -8,10 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
         <script src="https://kit.fontawesome.com/8ab6929af4.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/bootstrap.css">
         <link href="assets/css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/bootstrap.js"></script>
         <script src="assets/js/jquery.js"></script>
     </head>
     <body>
@@ -26,12 +26,12 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link"href="index.html">Home</a>
-                        <a class="nav-link" href="physical.html">My Sport</a>
+                        <a class="nav-link" href="physical.html">My sport</a>
                         <a class="nav-link active" aria-current="page" href="cognitive.html"><i class="fa-solid fa-laptop-code"></i> My forte</a>
                         <a class="nav-link" href="aesthetic.html">My niche</a>
                         <a class="nav-link" href="achieve.html">Achievements</a>
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.23.500</div>
+                        <div class="nav-link">Version: 1.24.500</div>
                     </div>
                 </div>
             </div>
