--- a/aesthetic.html
+++ b/aesthetic.html
@@ -27,12 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link"href="index.html">Home</a>
+                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
                         <a class="nav-link" href="physical.html">My sport</a>
                         <a class="nav-link" href="cognitive.html">My forte</a>
                         <a class="nav-link active" aria-current="page" href="aesthetic.html"><i class="fa-solid fa-music"></i> My niche</a>
                         <a class="nav-link" href="achieve.html">Achievements</a>
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.24.500</div>
+                        <div class="nav-link">Version: 1.26.500</div>
                     </div>
                 </div>
             </div>
@@ -99,6 +100,11 @@
                         <i class="fa-solid fa-house"><br>WHO AM I?</i>
                     </a>
                 </div>
+                <div class="col">
+                    <a href="portfolio.html">
+                        <i class="fa-solid fa-pager"></i> Portfolio</a>
+                    </a>    
+                </div>
                 <div class="col" title="A Logician">
                     <a href="cognitive.html">
                         <img class="icon" src="images/icons/logician.png" alt="Logician"><br>my forte
@@ -116,7 +122,7 @@
                 </div>
             </div>
         </div>
-        <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
+        <footer class="intro footer"> Copyright &copy; 2022 JKWEBSITE. All rights reserved.</footer>
         <script src="assets/js/jquery.js"></script>
         <script src="assets/js/bootstrap.js"></script>
     </body>
