--- a/cognitive.html
+++ b/cognitive.html
@@ -26,12 +26,13 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link"href="index.html">Home</a>
+                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
                         <a class="nav-link" href="physical.html">My sport</a>
                         <a class="nav-link active" aria-current="page" href="cognitive.html"><i class="fa-solid fa-laptop-code"></i> My forte</a>
                         <a class="nav-link" href="aesthetic.html">My niche</a>
                         <a class="nav-link" href="achieve.html">Achievements</a>
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.24.500</div>
+                        <div class="nav-link">Version: 1.26.500</div>
                     </div>
                 </div>
             </div>
@@ -152,6 +153,11 @@
                         <i class="fa-solid fa-house"><br>WHO AM I?</i>
                     </a>
                 </div>
+                <div class="col">
+                    <a href="portfolio.html">
+                        <i class="fa-solid fa-pager"></i> Portfolio</a>
+                    </a>    
+                </div>
                 <div class="col" title="A Spartan">
                     <a href="physical.html">
                         <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>my sport
@@ -169,6 +175,6 @@
                 </div>
             </div>
         </div>
-        <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
+        <footer class="intro footer"> Copyright &copy; 2022 JKWEBSITE. All rights reserved.</footer>
     </body>
 </html>
