--- a/physical.html
+++ b/physical.html
@@ -27,12 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link"href="index.html">Home</a>
+                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
                         <a class="nav-link active" aria-current="page" href="physical.html"><i class="fa-solid fa-person-biking"></i> My sport</a>
                         <a class="nav-link" href="cognitive.html">My forte</a>
                         <a class="nav-link" href="aesthetic.html">My niche</a>
                         <a class="nav-link" href="achieve.html">Achievements</a>
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.24.500</div>
+                        <div class="nav-link">Version: 1.26.500</div>
                     </div>
                 </div>
             </div>
@@ -127,6 +128,11 @@
                         <i class="fa-solid fa-house"><br>WHO AM I?</i>
                     </a>
                 </div>
+                <div class="col">
+                    <a href="portfolio.html">
+                        <i class="fa-solid fa-pager"></i> Portfolio</a>
+                    </a>    
+                </div>
                 <div class="col" title="A Logician">
                     <a href="cognitive.html">
                         <img class="icon" src="images/icons/logician.png" alt="Logician"><br>My forte
@@ -144,6 +150,6 @@
                 </div>
             </div>
         </div>
-        <footer class="intro footer"> Copyright &copy; 2022 JKPORTFOLIO. All rights reserved.</footer>
+        <footer class="intro footer"> Copyright &copy; 2022 JKWEBSITE. All rights reserved.</footer>
     </body>
 </html>
