--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i> Home</a>
-                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
+                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
+                        <a class="nav-link" href="physical.html">My sport</a>
+                        <a class="nav-link" href="cognitive.html">My forte</a>
+                        <a class="nav-link" href="aesthetic.html">My niche</a>
+                        <a class="nav-link" href="achieve.html">Achievements</a>
                         <div class="nav-link">================</div> 
                         <div class="nav-link">Version: 1.26.500</div>
                     </div>
@@ -52,6 +56,26 @@
                     <a href="portfolio.html">
                         <i class="fa-solid fa-pager"></i> Portfolio</a>
                     </a>    
+                </div>
+                <div class="col" title="A SPARTAN">
+                    <a href="physical.html">
+                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>My sport
+                    </a>
+                </div>
+                <div class="col" title="A LOGICIAN">
+                    <a href="cognitive.html">
+                        <img class="icon" src="images/icons/logician.png" alt="A Logician"><br>My forte
+                    </a>
+                </div>
+                <div class="col" title="A MUSICIAN">
+                    <a href="aesthetic.html">
+                        <img class="icon" src="images/icons/violin.png" alt="A Musician"><br>My niche
+                    </a>
+                </div>
+                <div class="col" title="A LEADER">
+                    <a href="achieve.html">
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>Achievements
+                    </a>
                 </div>
             </div>
         </div>
